Renaming Trivial to Critical to match the Java 22 change